@@ -1,7 +1,7 @@
 <div id="menu">
   <h1>- Camlp5 -</h1>
   <p class="subtitle">Version <version/></p>
-  <p>...work in progress... *<br/>... 29 August 2007...</p>
+  <p>...work in progress... *<br/>... 30 August 2007...</p>
   <ul>
     <li><a href="index.html">Introduction</a></li>
     <li><a href="ptools.html">Parsing and printing tools</a></li>
@@ -31,7 +31,7 @@
         <li><a href="quot.html">Quotations</a></li>
         <li><a href="revsynt.html">Revised syntax</a></li>
         <li><a href="scheme.html">Scheme syntax</a></li>
-        <li><a href="macros.html">Macros</a></li>
+        <li><a href="macros.html">Macros</a> *</li>
         <li><a href="pragma.html">Pragma directive</a></li>
         <li><a href="extfun.html">Extensible functions</a></li>
       </ul>
@@ -46,7 +46,7 @@
         <li><a href="commands.html">Commands and Files</a></li>
         <li><a href="library.html">Library</a></li>
         <li><a href="sources.html">Camlp5 sources</a></li>
-        <li><a href="about.html">About Camlp5</a> *</li>
+        <li><a href="about.html">About Camlp5</a></li>
       </ul>
     </li>
   </ul>
